@@ -61,12 +61,13 @@
 #   reset parametername  .
 
 # Most runtime variables have boolean values, some are switches, some have
-# string values, integer values and some are size values.
+# string values, integer values (if not explicit noted: unsigned) and some
+# are size values.
 # The boolean values will be evaluated as following:
 # 	to true:	  1, Y, ON, YES, TRUE  (no matter of case)
 # 	to false:	  0, N, OFF
-# A 'size' value is an integer optionally followed by K, M, or G for kilo, mega
-# or giga.
+# A 'size' value is an unsigned integer optionally followed by K, M, or G
+# for kilo, mega or giga.
 
 # For convenience a parameter in the runtime.cfg file may be defined by using
 # either the environment variable name or the parameter name.
